--- a/scss/projects/_projects.scss
+++ b/scss/projects/_projects.scss
@@ -129,7 +129,7 @@
 .topmargin {
     //padding-top: 63px;
     //padding-top: 100px;
-    padding-top: 80px;
+    margin-top: 80px;
 }
 
 
@@ -137,7 +137,7 @@
 
     .topmargin {
         //padding-top: 100px !important;
-        padding-top: 125px;
+        margin-top: 115px;
     }
 }
 
